kubernetes/apps/lidarr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: lidarr-ingress
  namespace: media
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`lidarr.sobrinho.pt`)
      kind: Rule
      services:
        - name: lidarr
          port: main
  tls:
    secretName: lidarr-cert
